Sat Dec  4 15:38:34 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htnet/HtHTTP.cc, htnet/HtHTTP.h, htdig/Document.cc
	fixed proxy bug. GET command in HtHTTP included only
	path of url insead full url when use proxy. 
	HtHTTP::UseProxy(int) added.

Thu Dec  2 16:47:30 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc(parse_url): Use a static int to avoid
	re-fetching local_urls_only from the config object.
	(Initial, got_href, got_redirect): Try to get the local filename
	for a server's robots.txt file and pass it along to the newly
	generated server.
	
	* htdig/Server.cc(ctor): Retrieve the robots.txt file from the
	filesystem when possible and respect the local_urls_only option.

	* htdig/Server.h: Change type of local_robots_file to String* to
	better match Retriever::GetLocal().
	
Wed Dec  1 19:47:20 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtRegex.cc, htlib/HtRegex.h (set*): Add a case_sensitive
	flag which defaults to insensitive. This better mirrors the
	StringMatch class.
	
	* htcommon/URL.cc(signature): Make the signature a proper URL to
	the base of the server.

	* htdig/Server.h: Add IsDead() methods to query the status of the
	server, as well as an IsDisallowed() method to query whether a URL
	is forbidden by the robots.txt rules. Change _disallow to HtRegex.

	* htdig/Server.cc(ctor): Only retrieve the robots.txt file if this
	is an http or https server.
	(robotstxt): Use the proper HtRegex method for setting the pattern.
	(push): Remove logic checking the _disallow patterns. This is now
	done by the Retriever object.

	* htcommon/defaults.cc: Add new attribute "local_urls_only" which
	defaults to false, which dictates whether retrieval should revert
	to another method if RetrieveLocal() fails.
	
	* htdig/Retriever.cc(parse_url): Check to see if the server is
	dead before calling the Retrieve() method. Notify the server
	object if a connection fails. Also respects the new