@@ -5,6 +5,9 @@ Sat Dec  4 15:38:34 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>
 	path of url insead full url when use proxy. 
 	HtHTTP::UseProxy(int) added.
 
+	* htdig/Document.cc: make "http_proxy" parameter
+	url-depended for new configuration.
+
 Thu Dec  2 16:47:30 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htdig/Retriever.cc(parse_url): Use a static int to avoid
